<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="324dp"
        android:layout_height="160dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/suma"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:CornerRadius="15dp"
                android:backgroundTint="#F57C00"
                android:onClick="sumar"
                android:text="@string/suma"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/resta"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:CornerRadius="15dp"
                android:backgroundTint="#F57C00"
                android:onClick="restar"
                android:text="@string/resta"
                app:iconTint="#512DA8"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="96dp">

            <Button
                android:id="@+id/multiplicacion"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:CornerRadius="15dp"
                android:backgroundTint="#F57C00"
                android:onClick="multiplicar"
                android:text="@string/multiplicacion"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <Button
                android:id="@+id/division"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="159dp"
                android:layout_height="match_parent"
                android:CornerRadius="15dp"
                android:backgroundTint="#F57C00"
                android:onClick="dividir"
                android:text="@string/division"
                app:iconTint="#303F9F"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
        </TableRow>

    </TableLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="352dp"
        android:layout_height="380dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="370dp">

            <EditText
                android:id="@+id/cifra_02"
                android:layout_width="231dp"
                android:layout_height="51dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/cifra_02"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#FBC02D"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cifra_01" />

            <EditText
                android:id="@+id/cifra_01"
                android:layout_width="230dp"
                android:layout_height="53dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/cifra_01"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#FBC02D"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/resultado"
                android:layout_width="267dp"
                android:layout_height="59dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/resusltado"
                android:text="@string/resultado"
                android:textAlignment="center"
                android:textColor="#E11313"
                android:textDirection="inherit"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cifra_02" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="305dp"
                android:layout_height="72dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/ingrese_dos_numeros_a_calcular"
                android:textAlignment="center"
                android:textColor="#390202"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/cifra_01"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>